syntax = "proto3";

package fusion_iam.v1;

service Auth {
  rpc Signin(SigninRequest) returns (SigninResponse) {}
}

message SigninRequest {
  optional string email = 1;
  optional string phone = 2;
  string password = 3;
}

enum TokenKind {
  TOKEN_KIND_UNSPECIFIED = 0;
  BEARER = 1;
}

message SigninResponse {
  string token = 1;
  TokenKind token_kind = 2;
}
